--- a/.github/workflows/Video-processing.yml
+++ b/.github/workflows/Video-processing.yml
@@ -13,10 +13,13 @@ on:
         type: number
         default: 1.5
 
+permissions:
+  contents: write
+
 jobs:
   process-video:
     runs-on: ubuntu-latest
-    timeout-minutes: 120 # Timeout badha do agar videos bade honge
+    timeout-minutes: 45
 
     steps:
     - name: Checkout repository
@@ -25,7 +28,7 @@ jobs:
     - name: Install required packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y ffmpeg wget
+        sudo apt-get install -y ffmpeg wget bc
 
     - name: Download video from provided URL
       run: |
@@ -35,7 +38,7 @@ jobs:
       shell: bash
       run: |
         # Video speed calculation: 1 / desired speed
-        VIDEO_SPEED=$(echo "1 / ${{ github.event.inputs.playback_speed }}" | bc -l)
+        VIDEO_SPEED=$(echo "scale=10; 1 / ${{ github.event.inputs.playback_speed }}" | bc)
         echo "VIDEO_FILTER=setpts=${VIDEO_SPEED}*PTS" >> $GITHUB_ENV
         echo "AUDIO_FILTER=atempo=${{ github.event.inputs.playback_speed }}" >> $GITHUB_ENV
 
@@ -49,27 +52,19 @@ jobs:
         -movflags +faststart \
         processed_video.mp4
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+    - name: Create Release and Upload Asset
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: video-${{ github.run_id }}
-        release_name: Processed Video (${{ github.event.inputs.playback_speed }}x)
-        draft: false
-        prerelease: false
-
-    - name: Upload Processed Video
-      uses: actions/upload-release-asset@v1
+        name: "Processed Video (${{ github.event.inputs.playback_speed }}x)"
+        body: |
+          Video processed at ${{ github.event.inputs.playback_speed }}x speed
+          - Original URL: ${{ github.event.inputs.video_url }}
+          - Processed on: ${{ github.event.inputs.playback_speed }}
+        files: processed_video.mp4
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./processed_video.mp4
-        asset_name: processed_video.mp4
-        asset_content_type: video/mp4
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Cleanup original video
+    - name: Cleanup
       run: |
-        rm -f original_video.mp4
+        rm -f original_video.mp4 processed_video.mp4
