--- a/.github/workflows/Video-processing.yml
+++ b/.github/workflows/Video-processing.yml
@@ -46,6 +46,7 @@ jobs:
       run: |
         wget -q https://github.com/porjo/youtubeuploader/releases/download/v1.25.5/youtubeuploader_1.25.5_Linux_amd64.tar.gz
         chmod +x youtubeuploader_1.25.5_Linux_amd64.tar.gz
+        tar -xzf youtubeuploader_1.25.5_Linux_amd64.tar.gz --one-top-level
         sudo mv youtubeuploader_1.25.5_Linux_amd64 /usr/local/bin/youtubeuploader
         
     - name: Extract filename from URL
