--- a/.github/workflows/Video-processing.yml
+++ b/.github/workflows/Video-processing.yml
@@ -12,12 +12,8 @@ on:
         required: true
         type: number
         default: 1.5
-      video_title:
-        description: 'Video title'
-        required: true
-        type: string
-      video_description:
-        description: 'Video Description'
+      release_name:
+        description: 'Release Name'
         required: true
         type: string
 
@@ -36,16 +32,8 @@ jobs:
     - name: Install required packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y ffmpeg wget bc python3 python3-pip
+        sudo apt-get install -y ffmpeg wget bc
 
-    - name: Setup Service Account JSON
-      run: |
-        echo '${{ secrets.YOUTUBE_SERVICE_ACCOUNT_JSON }}' > service-account.json
-
-    - name: Setup Python Environment
-      run: |
-        pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib
-        
     - name: Extract filename from URL
       shell: bash
       run: |
@@ -68,14 +56,18 @@ jobs:
       run: |
         ffmpeg -i "$ORIGINAL_FILENAME" -filter_complex "[0:v]setpts=0.6666666666*PTS[v];[0:a]atempo=${{ github.event.inputs.playback_speed }}[a]" -map "[v]" -map "[a]" -c:v libx264 -profile:v main -level 4.0 -pix_fmt yuv420p -c:a aac -b:a 128k -movflags +faststart output_video.mp4
 
-    - name: Upload Video to YouTube
-      run: | 
-        python3 youtube_upload.py \
-          --credentials service-account.json \
-          --file output_video.mp4 \
-          --title "${{ github.event.inputs.video_title }}" \
-          --description "${{ github.event.inputs.video_description }}" \
-          --privacy "private"
+    - name: Create Release and Upload Asset
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: video-${{ github.run_id }}
+        name: "${{ github.event.inputs.release_name }}"
+        body: |
+          - ${{ github.event.inputs.release_name }} processed at ${{ github.event.inputs.playback_speed }}x speed
+          - Processed on: ${{ github.event.inputs.playback_speed }}
+        files: output_video.mp4
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Cleanup
       run: |
         rm -f "$ORIGINAL_FILENAME" output_video.mp4
