--- a/.github/workflows/Video-processing.yml
+++ b/.github/workflows/Video-processing.yml
@@ -21,7 +21,11 @@ on:
         description: 'Release Name'
         required: true
         type: string
-
+      video_title:
+        description: 'Title for the YouTube Video'
+        required: true
+        type: string
+        
 permissions:
   contents: write
 
@@ -153,6 +157,33 @@ jobs:
             -H "Content-Type: application/octet-stream" \
             --data-binary @"$FILE" \
             "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.create_release.outputs.id }}/assets?name=$(basename "$FILE")"
+        done
+
+    - name: Generate YouTube access token
+      run: |
+        response=$(curl -s \
+          -d "client_id=${{ secrets.YOUTUBE_CLIENT_ID }}" \
+          -d "client_secret=${{ secrets.YOUTUBE_CLIENT_SECRET }}" \
+          -d "refresh_token=${{ secrets.YOUTUBE_REFRESH_TOKEN }}" \
+          -d "grant_type=refresh_token" \
+          "https://oauth2.googleapis.com/token")
+        
+        access_token=$(echo $response | jq -r '.access_token')
+        echo "ACCESS_TOKEN=$access_token" >> $GITHUB_ENV
+
+    - name: Upload to YouTube using Python script
+      run: |
+        for i in $(seq 1 $PART_COUNT); do
+          VIDEO_FILE="${BASE_FILENAME}_part${i}_processed.mp4"
+          TITLE="${{ github.event.inputs.video_title }} - Part $i of $PART_COUNT"
+          DESCRIPTION="Part $i of $PART_COUNT. Processed at ${{ github.event.inputs.playback_speed }}x speed"
+          
+          python3 youtube_upload.py \
+            --file "$VIDEO_FILE" \
+            --title "$TITLE" \
+            --description "$DESCRIPTION" \
+            --access_token "$ACCESS_TOKEN" \
+            --privacy "private"
         done
         
     - name: Final cleanup
